--- a/client/package.json
+++ b/client/package.json
@@ -6,10 +6,20 @@
     "@testing-library/jest-dom": "^5.11.4",
     "@testing-library/react": "^11.1.0",
     "@testing-library/user-event": "^12.1.10",
+    "axios": "^0.21.0",
+    "csvtojson": "^2.0.10",
+    "materialize-css": "^1.0.0",
     "react": "^17.0.1",
+    "react-confirm-alert": "^2.6.2",
     "react-dom": "^17.0.1",
+    "react-dropzone": "^7.0.1",
+    "react-materialize": "^3.9.3",
+    "react-router-dom": "^5.2.0",
+    "react-router-hash-link": "^2.2.2",
     "react-scripts": "4.0.1",
-    "web-vitals": "^0.2.4"
+    "react-scroll": "^1.8.1",
+    "react-transition-group": "^4.4.1",
+    "web-vitals": "^1.0.1"
   },
   "scripts": {
     "start": "react-scripts start",
@@ -34,5 +44,6 @@
       "last 1 firefox version",
       "last 1 safari version"
     ]
-  }
+  },
+  "proxy": "http://localhost:5000"
 }
